--- a/Signal/translations/uk.lproj/PluralAware.stringsdict
+++ b/Signal/translations/uk.lproj/PluralAware.stringsdict
@@ -93,13 +93,13 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%1$ld person will be added to the call.</string>
+			<string>До виклику буде додано %1$ld учасника.</string>
 			<key>few</key>
-			<string>%1$ld people will be added to the call.</string>
+			<string>До виклику буде додано %1$ld учасники.</string>
 			<key>many</key>
-			<string>%1$ld people will be added to the call.</string>
+			<string>До виклику буде додано %1$ld учасників.</string>
 			<key>other</key>
-			<string>%1$ld people will be added to the call.</string>
+			<string>До виклику буде додано %1$ld учасника.</string>
 		</dict>
 	</dict>
 	<key>CALL_LINK_APPROVE_ALL_REQUESTS_CONFIRMATION_TITLE_%ld</key>
@@ -113,13 +113,13 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Approve %1$ld Request?</string>
+			<string>Прийняти %1$ld запит?</string>
 			<key>few</key>
-			<string>Approve %1$ld Requests?</string>
+			<string>Прийняти %1$ld запити?</string>
 			<key>many</key>
-			<string>Approve %1$ld Requests?</string>
+			<string>Прийняти %1$ld запитів?</string>
 			<key>other</key>
-			<string>Approve %1$ld Requests?</string>
+			<string>Прийняти %1$ld запита?</string>
 		</dict>
 	</dict>
 	<key>CALL_LINK_DENY_ALL_REQUESTS_CONFIRMATION_BODY_%ld</key>
@@ -133,13 +133,13 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%1$ld person will not be added to the call.</string>
+			<string>До виклику не буде додано %1$ld учасника.</string>
 			<key>few</key>
-			<string>%1$ld people will not be added to the call.</string>
+			<string>До виклику не буде додано %1$ld учасників.</string>
 			<key>many</key>
-			<string>%1$ld people will not be added to the call.</string>
+			<string>До виклику не буде додано %1$ld учасників.</string>
 			<key>other</key>
-			<string>%1$ld people will not be added to the call.</string>
+			<string>До виклику не буде додано %1$ld учасника.</string>
 		</dict>
 	</dict>
 	<key>CALL_LINK_DENY_ALL_REQUESTS_CONFIRMATION_TITLE_%ld</key>
@@ -153,13 +153,33 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Deny %1$ld Request?</string>
+			<string>Відхилити %1$ld запит?</string>
 			<key>few</key>
-			<string>Deny %1$ld Requests?</string>
+			<string>Відхилити %1$ld запити?</string>
 			<key>many</key>
-			<string>Deny %1$ld Requests?</string>
+			<string>Відхилити %1$ld запитів?</string>
 			<key>other</key>
-			<string>Deny %1$ld Requests?</string>
+			<string>Відхилити %1$ld запита?</string>
+		</dict>
+	</dict>
+	<key>CALL_LINK_JOIN_REQUEST_AMOUNT_MORE_BUTTON_%ld</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>+%1$ld Request</string>
+			<key>few</key>
+			<string>+%1$ld Requests</string>
+			<key>many</key>
+			<string>+%1$ld Requests</string>
+			<key>other</key>
+			<string>+%1$ld Requests</string>
 		</dict>
 	</dict>
 	<key>CALL_LINK_REQUEST_HEADER_COUNT_%d</key>
@@ -173,13 +193,13 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%1$ld Person Waiting</string>
+			<string>Очікує %1$ld людина</string>
 			<key>few</key>
-			<string>%1$ld People Waiting</string>
+			<string>Очікує %1$ld людини</string>
 			<key>many</key>
-			<string>%1$ld People Waiting</string>
+			<string>Очікує %1$ld людей</string>
 			<key>other</key>
-			<string>%1$ld People Waiting</string>
+			<string>Очікує %1$ld людини</string>
 		</dict>
 	</dict>
 	<key>CALL_PEOPLE_HERE</key>
